# rust-axum-project

./: .env  Cargo.toml  README.md
migrations/: 20250816070002_tables.sql
