[package]
name = "rust-axum-project"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"]}
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
time = "0.3.41"
tower-http = { version = "0.6.6", features = ["cors","trace"] }
tracing-subscriber = { version = "0.3.19"}
lettre = "0.11.17"
regex = "1.11.1"
